# base-sequence-compression

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
benches/: main.rs
src/: lib.rs
tests/: compression.rs  compression_rate.rs
tests/input/: test.fasta
