[package]
name = "base_sequence_compression"
version = "1.0.0"
authors = ["Marshall Ku <marshall@kakao.com>"]
edition = "2021"
description = "Library for compressing and decompressing DNA sequences"
license = "MIT"
repository = "https://github.com/marshallku/base-sequence-compression"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = "1.0.35"
wasm-bindgen = "0.2.99"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["File", "Blob"] }
js-sys = "0.3"

[[bench]]
name = "main"
harness = false
